Changelog

$Id: Changes,v 1.69 2011-03-23 12:40:54 oops Exp $

* Wed, Mar 23 2011
	- removed fileread api. use readfile api
	- writefile api is binary safe. (changed proto type)

* Tue, Mar 22 2011
	- redefine type declare with stdint

* Mon, Mar 21 2011
	- start 1.0 branch
