@@ -1,10 +1,11 @@
 Changelog
 
-$Id: Changes,v 1.69 2011-03-23 12:40:54 oops Exp $
+$Id: Changes,v 1.70 2011-03-23 12:42:31 oops Exp $
 
 * Wed, Mar 23 2011
 	- removed fileread api. use readfile api
 	- writefile api is binary safe. (changed proto type)
+    - On append mode, writefile api don't add newline any more at first.
 
 * Tue, Mar 22 2011
 	- redefine type declare with stdint
